[gd_scene load_steps=5 format=3 uid="uid://goqims14xemp"]

[ext_resource type="Script" uid="uid://bpiyrghsanfmv" path="res://Scripts/MenuUi.gd" id="1_f1v4l"]
[ext_resource type="FontFile" uid="uid://b563rqedfhe7w" path="res://Textures/Fonts/HelpMe.ttf" id="2_23r57"]
[ext_resource type="FontFile" uid="uid://do26357pp65jx" path="res://Textures/Fonts/who asks satan.ttf" id="2_uc07g"]

[sub_resource type="LabelSettings" id="LabelSettings_uc07g"]
font = ExtResource("2_uc07g")
font_size = 70
outline_size = 4
outline_color = Color(8.731843e-06, 8.731842e-06, 8.731842e-06, 1)

[node name="MenuUi" type="CanvasLayer"]
script = ExtResource("1_f1v4l")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.005
offset_bottom = -0.23999023

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8
alignment = 1

[node name="MenuLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Menu: "
label_settings = SubResource("LabelSettings_uc07g")
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_23r57")
text = "Start"

[node name="SettingButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_23r57")
text = "        SETTINGS        "

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_23r57")
text = "EXIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
